@@ -35,6 +35,8 @@ rm -rf $RPM_BUILD_ROOT
 /usr/local/lib/@PROJECTNAME@/vbscript.nnw
 
 %changelog
+* Wed Feb 26 2003 Robert Sandilands <rsandila@netscape.net>
+- Added some .asp samples for accurate .asp detection
 * Fri Feb 21 2003 Robert Sandilands <rsandila@netscape.net>
 - Initial Release
 
