@@ -50,6 +50,9 @@ rm -rf $RPM_BUILD_ROOT
 /usr/local/lib/@PROJECTNAME@/vbscript.seperator
 
 %changelog
+* Wed Feb 26 2003 Robert Sandilands <rsandila@netscape.net>
+- Added detection of text files to scriptid utility
+- Added API function in libraries to detect text files
 * Fri Feb 21 2003 Robert Sandilands <rsandila@netscape.net>
 - Initial Release
 
